--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<app-navmenu></app-navmenu>
+
+
+
 <!--Interpolation-->
 <h1>This is the title - {{title}}</h1>
 
@@ -78,6 +83,7 @@
 <div>
     <button (click)="checkifAdmin()">Grant Admin Rights</button>
 </div>
-<!-- <app-navmenu></app-navmenu> -->
+
+
 
 
