--- a/src/app/components/navmenu/navmenu.component.html
+++ b/src/app/components/navmenu/navmenu.component.html
@@ -1,3 +1,24 @@
-
-  <h1 style='background-color: indianred'>navmenu works!</h1>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- <a class="navbar-brand" href="#">
+    <img src="../../../assets/Logo.psd" width="30" height="30" alt="">
+  </a> -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item ">
+        <a class="nav-link" routerLink='/home'>Home<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/speech'>Demo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/about'>About Us</a>
+      </li>
+      <!-- <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+      </li> -->
+    </ul>
+  </div>
+</nav>
